# med-autogrant

./: .agent-contract-baseline.json  .gitignore  AGENTS.md  Makefile  README.md  README.zh-CN.md  TASTE.md  pyproject.toml
.omx/: metrics.json
.sentrux/: baseline.json  rules.toml
agent/: README.md
contracts/: README.md  action_catalog.json  agent_lab_handoff.json  artifact_locator_contract.json  capability_map.json  cognitive_kernel_adoption.json  domain_descriptor.json  epistemic_review_scope_profile.json  foundry-agent-os-domain-kernel-manifest.json  foundry_agent_series.json  functional_privatization_audit.json  generated_aggregate_source_index.json  generated_surface_handoff.json  golden_path_profile.json  live_stage_run_progress_evidence.json  oma_handoff_refs.json  opl-native-profile.json  opl_agent_package_manifest.json  opl_ledger_artifact_registration.json  owner_receipt_contract.json  pack_compiler_input.json  private_functional_surface_policy.json  scholar_skill_binding_contract.json  source_closure_audit.json  stage_artifact_kernel_adoption.json  stage_control_plane.json  stage_operating_principles.json  stage_quality_cycle_policy.json  stage_run_canary_evidence.json  stage_run_kernel_profile.json  standard-agent-principles-adoption.json  standard_agent_conformance_profile.json  state_index_kernel_adoption.json  temporal_stage_run_consumption_policy.json  workspace_lifecycle_policy.json
docs/: README.md  README.zh-CN.md  architecture.md  decisions.md  docs_portfolio_consolidation.md  documentation-governance.md  domain-harness-os-positioning.md  domain-positioning.md  domain-positioning.zh-CN.md  invariants.md  mvp-scope.md  mvp-scope.zh-CN.md  project.md  status.md
examples/: funding_discovery_input_cardiovascular.json  funding_discovery_input_official_live_cardiovascular.json  nih_r21_workspace_p2a_input_intake.json  nsfc_workspace_minimal.json  nsfc_workspace_p2a_direction_screening.json  nsfc_workspace_p2a_input_intake.json  nsfc_workspace_p2a_question_refinement.json  nsfc_workspace_p2b_argument_building.json  nsfc_workspace_p2b_fit_alignment.json  nsfc_workspace_p2b_outline.json  nsfc_workspace_p2c_critique.json  nsfc_workspace_p2c_drafting.json  nsfc_workspace_p2c_revision.json  nsfc_workspace_p3a_major_reframe.json  nsfc_workspace_p3a_ready_for_submission.json  nsfc_workspace_p3b_re_review_major_revision.json  nsfc_workspace_p3c_forced_rollback_argument.json  nsfc_workspace_p3c_presubmission_frozen.json  profile_selection_input_nih_r21.json  profile_selection_input_nsfc_general.json  profile_selection_input_wellcome_discovery.json
runtime/: README.md
scripts/: check-line-budget.py  check_descriptor_contracts.py  check_generated_aggregate_sources.py  check_source_purity_guard.py  install-codex-plugin.sh  line_budget.py  opl-module-healthcheck.sh  repo-hygiene.sh  run-opl-quality-details.sh  run-pytest-clean.sh  run-python-clean.sh  run-structural-quality-gate.sh  verify.sh
tests/: cli_validate_cases.py  conftest.py  test_active_path_scan_policy_guard.py  test_ai_first_quality_boundary.py  test_ai_route_policy_contract.py  test_artifact_bundle.py  test_authoring_executor.py  test_authoring_mainline_cli.py  test_authoring_mainline_controller.py  test_capability_map.py  test_cli_smoke.py  test_cli_validate_workspace.py  test_cli_validate_workspace_error_cases.py  test_cli_validate_workspace_product_entry_cases.py  test_cli_validate_workspace_revision_cases.py  test_closeout_schema_registry.py  test_codex_cli.py  test_codex_plugin.py  test_codex_plugin_installer.py  test_codex_plugin_installer_script.py  test_cognitive_kernel_adoption_contract.py  test_control_plane.py  test_critique_executor.py  test_critique_loop_cli.py  test_critique_loop_controller.py  test_critique_policy.py  test_domain_entry.py  test_domain_executor_client.py  test_domain_runtime.py  test_domain_runtime_autonomy.py  test_domain_runtime_quality.py  test_domain_runtime_split.py  test_editable_shared_bootstrap.py  test_epistemic_review_scope_profile.py  test_executor_first_landing_program.py  (+67 more)
(+644 files in other folders)
