[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "med-autogrant"
version = "0.1.0"
description = "Medical grant authoring domain agent for NSFC-oriented workflows."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
  { name = "Gao Feng" }
]
dependencies = [
    "opl-harness-shared @ git+https://github.com/gaofeng21cn/one-person-lab.git@c5d4a93bd4bb64adf1228ecf7f2a9038c7dce278#subdirectory=python/opl-harness-shared",
]

[project.optional-dependencies]
proof = [
    "hermes-agent[acp]",
]

[project.scripts]
medautogrant = "med_autogrant.cli:entrypoint"
mag = "med_autogrant.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "/tmp/med-autogrant-pytest-cache"
markers = [
  "meta: repo-tracked program control and repository hygiene checks",
  "smoke: minimal default CLI/product entry health checks that do not require optional proof dependencies",
  "integration: cross-surface integration checks that are broader than unit contracts",
  "regression: heavier matrix, provenance oracle, runtime/export, and product regression checks",
  "proof: explicit optional hosted/Hermes proof lane that may require optional dependencies",
  "structure: repository structure and architecture governance checks",
]

[tool.uv.sources]
hermes-agent = { git = "https://github.com/NousResearch/hermes-agent.git", rev = "96051955755a83f22afed5e3501d447462fbe9c8" }

[dependency-groups]
dev = [
    "pytest>=9,<10",
]
