[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "med-autogrant"
version = "0.1.0"
description = "Medical grant authoring domain agent for NSFC-oriented workflows."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
  { name = "Gao Feng" }
]
dependencies = [
    "opl-harness-shared @ git+https://github.com/gaofeng21cn/one-person-lab.git@e1e734031ab3ea45596c6ce131f611f296ca9746#subdirectory=python/opl-harness-shared",
]

[project.scripts]
medautogrant = "med_autogrant.cli:entrypoint"
mag = "med_autogrant.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "/tmp/med-autogrant-pytest-cache"
markers = [
  "meta: repo-tracked program control and repository hygiene checks",
  "smoke: minimal default CLI/product entry health checks",
  "integration: cross-surface integration checks that are broader than unit contracts",
  "regression: heavier matrix, provenance oracle, runtime/export, and product regression checks",
  "proof: explicit optional hosted/executor proof lane",
  "structure: repository structure and architecture governance checks",
]

[tool.setuptools.package-data]
med_autogrant = ["product_entry_parts/consumer_thinning_audit/*.json"]

[dependency-groups]
dev = [
    "pytest>=9,<10",
]
